Added Sorting Filters for Home Page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <section id="carousel-section" class="">
 
     </section>
+
+    <div id="sortFilter">
+        
+    </div>
     
     <main id="all-cards">
 
