Updated Category pages, UI changes

--- a/Men-Clothing.html
+++ b/Men-Clothing.html
@@ -14,7 +14,7 @@
 
     </section> -->
 
-    <header id="categ-header" class="mb-5 pb-5">Men's Clothing</header>
+    <header id="categ-header" class="mb-5 pb-5 lead display-4 mt-4 ms-5">Men's Clothing</header>
 
     <div id="sortFilter" class="text-end me-5 pe-5 mb-5">
         
