--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
             "description": "Test Transaction",
             "image": "https://example.com/your_logo",
             "order_id": "", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-            "callback_url": "../",
+            "callback_url": "/",
             "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
                 "name": "Gaurav Kumar", //your customer's name
                 "email": "gaurav.kumar@example.com",
