--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <section id="carousel-section" class="mb-5 pb-5">
 
     </section>
+<!-- 
+    <form class="d-flex">
+                <input class="me-2" type="" id='search-input' placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" id='search-bar' type="">Search</button>
+    </form> -->
+
+    <div id="search" class="ms-5 d-flex gap-5">
+            <label for="searchInput" class="lead">Products:</label>
+            <input id="searchInput" type="text" class="form-control" placeholder="Search" style="width: 20vw;">
+        </div>
 
     <div id="sortFilter" class="text-end me-5 pe-5 mb-5">
         
