Added margins & RWD Changes for Carousel at index

--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
 <body>
     <script src="../static/nav.js"></script>
     
-    <main id="cart-section">
+    <main id="cart-section" class="m-5 p-5">
     </main>
 
     <section id="checkout-total" class="display-5 mt-5 mb-5 ms-4">
