--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
     </div>
     
-    <main id="all-cards">
+    <main id="all-cards" class="m-5 p-5">
 
     </main>
     <script type="module" src="./scripts/debugTest.js"></script>
